<resources>
    <string name="app_name">TheBioskin</string>
    <string name="helpCenter">Trung tâm trợ giúp</string>
    <string name="welcome"><br>Xin chào <b>Như Hằng</b>, \n</br><br>Hãy để The Bioskin giúp bạn</br></string>
    <string name="language">Ngôn ngữ</string>
    <string name="itemLanguage1">Tiếng Việt</string>
    <string name="itemLanguage2">Tiếng Anh</string>

    <!-- Rating -->
    <string name="rating_title">Đánh giá sản phẩm</string>
    <string name="rating_content">Chọn sao để xếp hạng sản phẩm</string>
    <string name="rating_submit">GỬI ĐÁNH GIÁ CỦA BẠN</string>
    <!-- Order  -->
    <string name="order_title">Đơn hàng của tôi</string>
    <string name="return_title">Hoàn trả</string>
    <string name="shipping_content">Đang giao hàng</string>
    <string name="Done_content">Hoàn thành</string>
    <string name="cancel_content">Đơn đã hủy</string>
    <string name="id_content">Mã đơn hàng:</string>
    <string name="order_id">XREWWKHFL</string>
    <string name="order_product">Nước tẩy trang hoa hồng CoCoon</string>
    <string name="order_size">500ml</string>
    <string name="product_quantity">x2</string>
    <string name="order_total">158.000đ </string>
    <string name="product_price"> 78.000đ</string>
    <string name="total_title">Thành tiền</string>
    <string name="return_text">Nếu sản phẩm bị lỗi bạn có thể yêu cầu hoàn trả sản phẩm mới</string>
    <string name="cancel_day_title">Ngày hủy:</string>
    <string name="return_day_title">Ngày hoàn trả:</string>
    <string name="cancel_day">19/11/2022</string>
    <string name="return_day">17/11/2022</string>


</resources>
