<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:background="#FFE3E8">
        <ImageView
            android:id="@+id/imv_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/imv_back"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:text="@string/order_title"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/ord_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:textSize="20dp"
            android:textColor="#F38375"
            android:text="@string/return_title"
            android:gravity="center"
            android:paddingBottom="2dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/order_line"/>
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/ord_bg1"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/id_content"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/txt_orderId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:paddingLeft="10dp"
                    android:text="@string/order_id"
                    android:textSize="18dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:background="#C8C8D5" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp">


                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/img_danhgiasanpham"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout

                    android:id="@+id/linearLayout4"
                    android:layout_width="307dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toEndOf="@+id/imageView6"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/txtName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/order_product"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtSize"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/order_size"
                            android:textSize="16dp" />
                        <TextView
                            android:id="@+id/txtQuantity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/product_quantity"
                            android:textSize="16dp"
                            android:paddingLeft="160dp" />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/txtProductPrice"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/product_price"
                        android:textSize="16dp" />



                </LinearLayout>

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="5dp"
                    android:background="#C8C8D5"
                    app:layout_constraintTop_toBottomOf="@+id/imageView6" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="2dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/total_title"
                    app:layout_constraintEnd_toStartOf="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/view" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/order_total"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/view"
                    app:layout_constraintTop_toBottomOf="@+id/view" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="5dp"
                    android:background="#C8C8D5"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toBottomOf="@+id/view2">




                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#C8C8D5"
                    app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2" />



            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/return_day_title"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/return_day"
                        android:textSize="14dp" />

                   </LinearLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>